--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Stripe Android SDK
+    implementation 'com.stripe:stripe-android:19.3.0'
+    implementation 'com.stripe:stripe-java:20.77.0'
+    implementation 'com.stripe:stripe-android:17.2.0'
+    implementation 'com.android.volley:volley:1.1.0'
+
 }
