--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,22 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <queries>
+        <package android:name="com.revolut.revolut" />
+        <package android:name="com.paypal.android.p2pmobile" />
+    </queries>
+
     <application
         android:allowBackup="true"
+        android:usesCleartextTraffic="true"
         android:icon="@drawable/dropoff"
         android:label="@string/app_name"
         android:roundIcon="@drawable/dropoff"
         android:supportsRtl="true"
         android:theme="@style/Theme.CarpoolProjectApp">
+        <activity
+            android:name=".CustomerPaymentActivity"
+            android:exported="false" />
         <activity
             android:name=".HistoryManualActivity"
             android:exported="false" />
