--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
 
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
         android:icon="@drawable/dropoff"
         android:label="@string/app_name"
         android:roundIcon="@drawable/dropoff"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CarpoolProjectApp">
+        android:theme="@style/Theme.CarpoolProjectApp"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".RateDriverActivity"
+            android:exported="false" />
         <activity
             android:name=".CustomerPaymentActivity"
             android:exported="false" />
