--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.google.gms.google-services'
     id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 32
@@ -34,11 +35,16 @@ android {
 
 dependencies {
 
+    implementation platform('com.google.firebase:firebase-bom:29.3.0')
+
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.3'
+    implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     implementation 'com.akexorcist:google-direction-library:1.2.1'
     implementation 'com.firebase:geofire-android-common:3.1.0'
